--- a/src/view/scenes/login.fxml
+++ b/src/view/scenes/login.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="932.0" style="-fx-background-color: #C2C2C2;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.controllers.LoginController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #C2C2C2;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.controllers.LoginController">
    <children>
-      <Pane nodeOrientation="LEFT_TO_RIGHT" prefHeight="399.0" prefWidth="500.0" style="-fx-background-color: #F1F3F4;">
+      <Pane nodeOrientation="LEFT_TO_RIGHT" prefHeight="600.0" prefWidth="410.0" style="-fx-background-color: #F1F3F4;">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
@@ -17,13 +17,15 @@
             <Text layoutX="178.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="INICIAR SESION" />
             <TextField layoutX="146.0" layoutY="137.0" promptText="Nombre" />
             <PasswordField layoutX="146.0" layoutY="215.0" promptText="Contraseña" />
-            <Button layoutX="177.0" layoutY="301.0" mnemonicParsing="false" onAction="#iniciarSesion" text="Iniciar Sesion" />
+            <Button layoutX="177.0" layoutY="289.0" mnemonicParsing="false" onAction="#iniciarSesion" text="Iniciar Sesion" />
          </children>
       </Pane>
-      <Text layoutX="647.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="REGISTRARSE" />
-      <TextField fx:id="nombre" layoutX="512.0" layoutY="133.0" promptText="Nombre" />
-      <TextField fx:id="telefono" layoutX="704.0" layoutY="133.0" promptText="Telefono" />
-      <PasswordField fx:id="password" layoutX="512.0" layoutY="187.0" promptText="Contraseña" />
-      <Button layoutX="645.0" layoutY="298.0" mnemonicParsing="false" onAction="#registrarse" text="Registrarse" />
+      <Text layoutX="580.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="REGISTRARSE" />
+      <TextField fx:id="nombre" layoutX="451.0" layoutY="133.0" promptText="Nombre" />
+      <TextField fx:id="telefono" layoutX="608.0" layoutY="133.0" promptText="Telefono" />
+      <PasswordField fx:id="password" layoutX="518.0" layoutY="189.0" promptText="Contraseña" />
+      <Button layoutX="464.0" layoutY="288.0" mnemonicParsing="false" onAction="#registrar" text="Registrarse" />
+      <Button layoutX="616.0" layoutY="288.0" mnemonicParsing="false" onAction="#verRegistrados" text="Ver Registros" />
+      <Button layoutX="566.0" layoutY="354.0" mnemonicParsing="false" onAction="#verContactos" text="Button" />
    </children>
 </Pane>
