--- a/src/view/scenes/contacts.fxml
+++ b/src/view/scenes/contacts.fxml
@@ -1,24 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.controllers.TableController">
    <children>
       <Text layoutX="373.0" layoutY="69.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contactos" />
-      <TableView fx:id="tablaContactos" layoutX="38.0" layoutY="92.0" prefHeight="317.0" prefWidth="727.0">
+      <TableView fx:id="tablaContactos" layoutX="38.0" layoutY="92.0" prefHeight="133.0" prefWidth="727.0">
         <columns>
-          <TableColumn fx:id="columnaNombre" minWidth="0.0" prefWidth="120.0" text="Nombre" />
-            <TableColumn fx:id="columnaTelefono" prefWidth="145.0" text="Teléfono" />
+          <TableColumn fx:id="columnaNombre" minWidth="0.0" prefWidth="363.0" text="Nombre" />
+            <TableColumn fx:id="columnaTelefono" prefWidth="363.0" text="Teléfono" />
         </columns>
       </TableView>
-      <Button fx:id="botonAgregar" layoutX="478.0" layoutY="505.0" mnemonicParsing="false" onAction="#agregarContacto" text="Agregar Contacto" />
-      <TextField fx:id="textfieldNombre" layoutX="53.0" layoutY="505.0" promptText="Nombre" />
-      <TextField fx:id="textfieldTelefono" layoutX="264.0" layoutY="505.0" promptText="Telefono" />
-      <Button layoutX="643.0" layoutY="505.0" mnemonicParsing="false" onAction="#verContactos" text="Button" />
+      <Button layoutX="652.0" layoutY="253.0" mnemonicParsing="false" onAction="#agregarContacto" text="Agregar Contacto" />
+      <TextField fx:id="textfieldNombre" layoutX="38.0" layoutY="253.0" promptText="Nombre" />
+      <TextField fx:id="textfieldTelefono" layoutX="251.0" layoutY="253.0" promptText="Telefono" />
+      <PasswordField fx:id="textfieldPassword" layoutX="450.0" layoutY="253.0" promptText="Password" />
+      <Button layoutX="356.0" layoutY="562.0" mnemonicParsing="false" onAction="#cerrarSesion" text="Cerrar Sesión" />
+      <Pane layoutX="32.0" layoutY="289.0" prefHeight="267.0" prefWidth="373.0">
+         <children>
+            <Text layoutX="143.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enviar Mensaje" />
+            <Text layoutX="12.0" layoutY="58.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Número de Teléfono" />
+            <TextField fx:id="numeroTelefono" layoutX="12.0" layoutY="62.0" />
+            <Text layoutX="14.0" layoutY="108.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mensaje" />
+            <TextArea fx:id="mensaje" layoutX="14.0" layoutY="112.0" prefHeight="118.0" prefWidth="306.0" />
+            <Button layoutX="14.0" layoutY="241.0" mnemonicParsing="false" onAction="#enviarMensaje" text="Enviar" />
+         </children>
+      </Pane>
+      <Pane layoutX="402.0" layoutY="294.0" prefHeight="259.0" prefWidth="361.0">
+         <children>
+            <Text layoutX="134.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mensajes Nuevos" />
+            <Button layoutX="137.0" layoutY="105.0" mnemonicParsing="false" onAction="#verMensajes" text="Ver Mensajes" />
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
