--- a/src/view/scenes/login.fxml
+++ b/src/view/scenes/login.fxml
@@ -9,23 +9,27 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #C2C2C2;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="logic.controllers.LoginController">
    <children>
-      <Pane nodeOrientation="LEFT_TO_RIGHT" prefHeight="600.0" prefWidth="410.0" style="-fx-background-color: #F1F3F4;">
+      <Pane nodeOrientation="LEFT_TO_RIGHT" prefHeight="600.0" prefWidth="346.0" style="-fx-background-color: #F1F3F4;">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
          <children>
-            <Text layoutX="178.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="INICIAR SESION" />
-            <TextField layoutX="146.0" layoutY="137.0" promptText="Nombre" />
-            <PasswordField layoutX="146.0" layoutY="215.0" promptText="Contraseña" />
-            <Button layoutX="177.0" layoutY="289.0" mnemonicParsing="false" onAction="#iniciarSesion" text="Iniciar Sesion" />
+            <Text layoutX="113.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="INICIAR SESION" />
+            <Text layoutX="86.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre" />
+            <TextField fx:id="nombreLogin" layoutX="81.0" layoutY="152.0" />
+            <Text layoutX="86.0" layoutY="237.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
+            <PasswordField fx:id="passwordLogin" layoutX="81.0" layoutY="252.0" />
+            <Button layoutX="74.0" layoutY="379.0" mnemonicParsing="false" onAction="#iniciarSesion" prefHeight="41.0" prefWidth="185.0" text="Iniciar Sesion" />
          </children>
       </Pane>
-      <Text layoutX="580.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="REGISTRARSE" />
-      <TextField fx:id="nombre" layoutX="451.0" layoutY="133.0" promptText="Nombre" />
-      <TextField fx:id="telefono" layoutX="608.0" layoutY="133.0" promptText="Telefono" />
-      <PasswordField fx:id="password" layoutX="518.0" layoutY="189.0" promptText="Contraseña" />
-      <Button layoutX="464.0" layoutY="288.0" mnemonicParsing="false" onAction="#registrar" text="Registrarse" />
-      <Button layoutX="616.0" layoutY="288.0" mnemonicParsing="false" onAction="#verRegistrados" text="Ver Registros" />
-      <Button layoutX="566.0" layoutY="354.0" mnemonicParsing="false" onAction="#verContactos" text="Button" />
+      <Text layoutX="517.0" layoutY="64.0" strokeType="OUTSIDE" strokeWidth="0.0" text="REGISTRARSE" />
+      <TextField fx:id="nombre" layoutX="366.0" layoutY="158.0" />
+      <TextField fx:id="telefono" layoutX="585.0" layoutY="158.0" />
+      <PasswordField fx:id="password" layoutX="477.0" layoutY="259.0" />
+      <Button layoutX="379.0" layoutY="378.0" mnemonicParsing="false" onAction="#registrar" prefHeight="41.0" prefWidth="185.0" text="Registrarse" />
+      <Button layoutX="585.0" layoutY="378.0" mnemonicParsing="false" onAction="#verRegistrados" prefHeight="41.0" prefWidth="185.0" text="Ver Registros" />
+      <Text layoutX="366.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre" />
+      <Text layoutX="585.0" layoutY="143.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Telefono" />
+      <Text layoutX="477.0" layoutY="242.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Password" />
    </children>
 </Pane>
